change getfirst function to get(0) so it can run on java 8++